hard-gists/559e56401dee3eccfa23/run.log
=== Docker Run Log for 559e56401dee3eccfa23 ===
Started at: Mi 29. Okt 15:46:04 CET 2025

[2025-10-29 15:46:05] START: Running container for 559e56401dee3eccfa23
[2025-10-29 15:46:05] SUCCESS: Container a8b3a7e67e199853c965e1a172f7c4c13304852182a8cec191e89809177a3d40 started for 559e56401dee3eccfa23
=== Container logs for 559e56401dee3eccfa23 ===
  File "/snippet.py", line 132
    print "GIFMAKER -- create GIF animations"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 559e56401dee3eccfa23 ===
[2025-10-29 15:46:07] INFO: Container a8b3a7e67e199853c965e1a172f7c4c13304852182a8cec191e89809177a3d40 has stopped
